Update style.css, z-index problem fixed

--- a/public/style.css
+++ b/public/style.css
@@ -275,7 +275,7 @@ body {
 }
 
 .flex-container {
-  z-index: -1;
+  z-index: 0;
 
   display: flex;
   justify-content: center; 
@@ -349,7 +349,7 @@ body {
 /* HTML HOVER LAYOUT */
 
 .hover-flex-container {
-  z-index: 0;
+  z-index: 1;
 
   position: fixed;
   bottom: 95px;
